--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+# Created by https://www.toptal.com/developers/gitignore/api/c++,meson,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=c++,meson,visualstudiocode
+
+### C++ ###
 # Prerequisites
 *.d
 
@@ -10,6 +15,12 @@
 # Precompiled Headers
 *.gch
 *.pch
+
+# Linker files
+*.ilk
+
+# Debugger Files
+*.pdb
 
 # Compiled Dynamic libraries
 *.so
@@ -31,8 +42,40 @@
 *.out
 *.app
 
-snake
+### Meson ###
+# subproject directories
+/subprojects/*
+!/subprojects/*.wrap
 
+# Meson Directories
+meson-logs
+meson-private
 
-# Visual studio code files
+# Meson Files
+meson_benchmark_setup.dat
+meson_test_setup.dat
+sanitycheckcpp.cc     # C++ specific
+sanitycheckcpp.exe    # C++ specific
+
+# Ninja
+build.ninja
+.ninja_deps
+.ninja_logs
+
+# Misc
+compile_commands.json
+
+### VisualStudioCode ###
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/c++,meson,visualstudiocode
