--- a/meson.build
+++ b/meson.build
@@ -9,6 +9,6 @@ configure_file(input : 'config.h.in', output : 'config.h', configuration: conf_d
 conf_inc = include_directories('.')
 
 
-install_data(['stage-1.map', 'stage-2.map', 'stage-3.map', 'stage-4.map', 'stage-5.map' ], install_dir : '/usr/share'/meson.project_name())
+install_data(['stage-1.map', 'stage-2.map', 'stage-3.map', 'stage-4.map', 'stage-5.map' ], install_dir : '/usr/share' + '/' + meson.project_name())
 executable(meson.project_name(), src, dependencies:dep, install:true, include_directories : conf_inc, install_dir : '/usr/bin')
 
